[Fix] arreglando algunas peticiones y control de cross origin