@@ -23,16 +23,16 @@ public class MainSecurity {
     SecurityFilterChain filterChain(HttpSecurity http) throws Exception{
         http.cors().configurationSource( request -> {
             CorsConfiguration corsConfiguration = new CorsConfiguration();
-            corsConfiguration.setAllowedOrigins(Arrays.asList("http://localhost:4200"));
+            corsConfiguration.setAllowedOrigins(List.of("*"));
             corsConfiguration.setAllowedOriginPatterns(List.of("*"));
             corsConfiguration.setAllowedMethods(List.of("HEAD","GET","POST","PUT","DELETE","PATCH","OPTIONS"));
-            corsConfiguration.setAllowCredentials(true);
+            corsConfiguration.setAllowCredentials(false);
             corsConfiguration.addExposedHeader("Message");
             corsConfiguration.setAllowedHeaders(List.of("*"));
             return corsConfiguration;
         }).and().csrf().disable()
                 .authorizeRequests()
-                .requestMatchers("/fichas-medicas/*","/fichas-medicas","/fichas-medicas/paciente/*")
+                .requestMatchers("/fichas-medicas/*","/fichas-medicas","/fichas-medicas/paciente/*","/fichas-medicas/medico/*","/fichas-medicas/detalle/paciente/*")
                 .permitAll()
                 .anyRequest().authenticated();
         return http.build();
